Utilisation des shared DTOs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,12 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../shared/dist/*"],
+      "@shared": ["../shared/dist/index.d.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
