--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "start:en": "ng serve --configuration=en-EN",
-    "start:fr": "ng serve --configuration=fr-FR",
+    "start:fr": "ng serve --configuration=fr",
     "build": "ng build",
     "build:en": "ng build --configuration=production,en-EN",
-    "build:fr": "ng build --configuration=production,fr-FR",
-    "build:all": "ng build --configuration=production,en-EN && ng build --configuration=production,fr-FR",
+    "build:fr": "ng build --configuration=production,fr",
+    "build:all": "ng build --configuration=production,en-EN && ng build --configuration=production,fr",
     "watch": "ng build --watch --configuration development",
     "extract-i18n": "ng extract-i18n"
   },
