ajout écran User management + authentication automatique en mode dev + build de prod et test + ajout des environnements de build

--- a/angular.json
+++ b/angular.json
@@ -45,11 +45,14 @@
       },
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
+            },
             "outputPath": "dist/my-app",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js",
               "src/polyfills.ts"
@@ -90,6 +93,11 @@
               "extractLicenses": false,
               "sourceMap": true
             },
+            "test": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            },
             "fr": {
               "localize": [
                 "fr"
@@ -104,7 +112,10 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-webpack:dev-server",
+          "options": {
+            "buildTarget": "my-app:build"
+          },
           "configurations": {
             "production": {
               "buildTarget": "my-app:build:production"
