--- a/angular.json
+++ b/angular.json
@@ -120,7 +120,8 @@
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "buildTarget": "my-app:build"
+            "buildTarget": "my-app:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
